Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38066

vcxproj file contains incorrect primary output filename

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 4.8.5, 4.8.6, 5.3.0 Beta1
    • Build tools: qmake
    • None
    • Visual Studio 2013, qt 4.8 head from git.
    • 826ab028a8c24b115286d251938396ca1de71b56

    Description

      If VERSION is set in the qmake project which is being built for win32-msvc2013 (or 2012, or 2010 I suspect), qmake sets the PrimaryOutput in the project file to include the major version, but the actual .exe filename generated does not contain the major version.

      With this simple project file

      TEMPLATE = app
      TARGET = versiontest
      VERSION = 5.0.0.0

      SOURCES += main.cpp

      The resulting vcxproj file says:

      <PrimaryOutput>versiontest5</PrimaryOutput>

      but in the linker section:

      <OutputFile>$(OutDir)\versiontest.exe</OutputFile>

      So the project won't run from the IDE, because versiontest5.exe does not exist.

      msvc_vcproj.cpp:919 is responsible for this but it's not clear why it does it for applications, seems to be only useful on shared libraries. Or at least the linker output filename should match.

      Attachments

        For Gerrit Dashboard: QTBUG-38066
        # Subject Branch Project Status CR V

        Activity

          People

            jbornema Joerg Bornemann
            hmoffatt Hamish Moffatt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes