vcxproj generator: append version suffix only to library targets

Task-number: QTBUG-38066
Change-Id: I2f1635f2cb34acb388c380fc2fc3fbe4df04bb03
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: 826ab028a8c24b115286d251938396ca1de71b56 https://github.com/qt/qtbase/commit/826ab028a8c24b115286d251938396ca1de71b56